<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        tools:context="com.demets.jas.MainActivity">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/layout_total_played"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_total_played_count"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ma_total_played_default_count"
                    android:textSize="35sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_total_played_label"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:paddingLeft="8dp"
                        android:text="@string/ma_total_played_label"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tv_total_played_updated"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:paddingLeft="8dp"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/layout_scrobbled_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/layout_total_played"
                android:layout_alignRight="@id/layout_total_played"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_scrobbled_today_count"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ma_today_played_default_count"
                    android:textSize="35sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_scrobbled_today_label"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:paddingLeft="8dp"
                        android:text="@string/ma_today_played_label"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tv_scrobbled_today_updated"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:paddingLeft="8dp"
                        android:text=""
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/layout_now_playing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@id/layout_scrobbled_today"
                android:layout_alignRight="@id/layout_scrobbled_today"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_now_scrobbling_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/ma_now_scrobbling_label"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_now_playing"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/ma_now_scrobbling_default_value"
                    android:textSize="13sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/love"
        app:backgroundTint="@color/colorPrimary" />
</android.support.design.widget.CoordinatorLayout>
